Fix z-index and overflow:hidden on heading picture animation

--- a/src/assets/styles/components/_heading.scss
+++ b/src/assets/styles/components/_heading.scss
@@ -42,6 +42,7 @@
   &__img {
     position: relative;
     padding-bottom: 56.2%; // force 16:9 ratio
+    overflow: hidden;
 
     & img {
       max-width: 100%;
@@ -83,6 +84,7 @@
       grid-column: 1/3;
       max-width: 75%;
       margin-top: calc(#{$size-step-6} * -1);
+      z-index: 30;
     }
 
     &__title--post,
